# The-Avro-Project

./: .gitignore  CMakeLists.txt  Find_STATICS.bat  Find_TODOs.bat  GenVSsolutionx64.bat  GenVSsolutionx86.bat  GitQuickPull.bat  GitQuickPush.bat  GitQuickPush.sh  README.md
ARE/: CMakeLists.txt
ARE/src/core/: ARE_stdafx.h  AvroAudio.h  AvroRenderingEngine.cpp  AvroRenderingEngine.h  AvroWindow.cpp  AvroWindow.h  OpenGL.cpp  OpenGL.h  Rendering.h  Window.cpp  Window.h
ARE/src/pch/: ARE_stdafx.cpp
AVE/: CMakeLists.txt
AVE/AvroUtil/: CMakeLists.txt
AVE/AvroUtil/src/core/: AU_stdafx.h  AvroAllocator.h  AvroArray.h  AvroAudio.cpp  AvroAudio.h  AvroInput.cpp  AvroInput.h  AvroMath.cpp  AvroMath.h  AvroMemoryPool.h  AvroString.h  AvroTimer.cpp  AvroTimer.h  AvroUtil.cpp  AvroUtil.h  AvroWindow.cpp  AvroWindow.h  Avro_Preprocessor.h  FileIO.h  MemoryHeap.cpp  MemoryHeap.h  MemoryQuantum.cpp  MemoryQuantum.h  MemoryStack.cpp  MemoryStack.h  Platform.h  Unix_AvroMath.h  Unix_Platform.h  VectorMath.h  avro_typedefs.h  win32_AvroMath.h  win32_Platform.cpp  win32_Platform.h
AVE/AvroUtil/src/pch/: AU_stdafx.cpp
AVE/src/core/: AVE_stdafx.h  AvroInput.cpp  AvroInput.h  AvroVersatileEngine.cpp  AvroVersatileEngine.h  Window.cpp  Window.h
AVE/src/pch/: AVE_stdafx.cpp
src/core/: AA_stdafx.h  Unix_Source.cpp  win32_Source.cpp
src/pch/: AA_stdafx.cpp
